--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <h1>Bienvenue sur mon site déployé automatiquement</h1>
+  <h1>Démo CI/CD made by François Prévost </h1>
+
   <p id="date"></p>
   <script src="script.js"></script>
 </body>
